# astrophage

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  EVALUATION.md  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: _event_bus.py  _llm_factory.py  _llm_text.py  _user_context.py  graph.py  state.py
backend/app/api/: chat.py  conversations.py  panchang.py  profiles.py  tools.py  voice.py
backend/app/auth/: dependencies.py  routes.py  service.py
backend/app/db/: client.py  models.py  queries.py
backend/app/eval/: __init__.py  assertions.py  judge.py  judge_audit.py  run.py  scorecard.py
backend/app/tools/: __init__.py  _langchain_tools.py  _resolvers.py  birth_chart.py  chart_svg.py  current_sky.py  daily_transits.py  dasha.py  family_profile.py  geocode.py  knowledge_lookup.py  kundali_milan.py  muhurta.py  nakshatra.py  panchang.py  sade_sati.py
backend/eval/: golden_set.jsonl
backend/knowledge_base/: vedic_astrology_kb_01_planets_signs.md  vedic_astrology_kb_02_houses_aspects_yogas.md  vedic_astrology_kb_03_nakshatras.md  vedic_astrology_kb_04_dasha_transits_panchang_muhurta.md  vedic_astrology_kb_05_remedies_divisional_special.md  vedic_astrology_kb_06_Chart Rendering, Current Sky & Interpretation Frameworks.md  vedic_planets.md
backend/scripts/: _chunk_inspect.py  ingest_knowledge.py  list_models.py
backend/supabase/migrations/: 001_initial_schema.sql  002_user_residence.sql
backend/tests/agent/: test_state.py
backend/tests/eval/: __init__.py  test_assertions.py  (+3 more)
(+72 files in other folders)
