[project]
name = "astrophage-backend"
version = "0.1.0"
description = "AstroAgent - AI Vedic Astrology Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.9",

    # LLM + Agent
    "langgraph>=0.4.0",
    "langchain-google-genai>=2.1.0",
    "langchain-core>=0.3.0",

    # Astrology computation
    "pyswisseph>=2.10.0",

    # Database
    "supabase>=2.10.0",

    # Vector store (embeddings via Google API, no local models)
    "qdrant-client>=1.12.0",

    # Auth
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",

    # Utils
    "langdetect>=1.0.9",
    "httpx>=0.28.0",
    "timezonefinder>=6.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.155.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
